deploy/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hezongjian
  name: hzj-svc
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: hzj-nginx
  type: ClusterIP
