deploy/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: blog
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - k8s.hezongjian.com
    secretName: quickstart-example-tls
  ingressClassName: nginx
  rules:
  - host: k8s.hezongjian.com
    http:
      paths:
      - backend:
          service:
            name: hzj-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
